sass refactor is done

--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
           </div>
         </section>
 
-        <section class="news-grid">
+        <section class="">
+          <div class="section-title"><h2>Trending news</h2></div>
+          <div class="news-grid">
           <!-- <h2 class="trendingNews">Trending News</h2> -->
           <div class="card">
             <img src="images/wheelchair.png" alt="guy on wheelchair" />
@@ -307,6 +309,7 @@
               from various parties and backgrounds..
             </div>
           </div>
+          </div>
         </section>
       </div>
     </main>
@@ -341,18 +344,6 @@
               <li><a href="#">Submit Feedback</a></li>
               <li><a href="#">Help Centre</a></li>
               <li><a href="#">Chat</a></li>
-              <p>
-                Audience Relations,<br />
-                KDK<br />
-                P.O. Box ###<br />
-                Vancouver BC<br />
-                Canada
-              </p>
-              <p>
-                Tool-free (Canada<br />
-                only):<br />
-                1-800-###-###
-              </p>
             </ul>
           </div>
           <div class="footer-about footer-container">
@@ -369,14 +360,8 @@
         </div>
       </div>
       <div class="footer-end">
-        <p class="kdk">KDK</p>
-        <img
-          class="logo2"
-          src="images/newspaper.png"
-          alt="A icon of newspaper"
-        />
+        
         <p class="copywrite">&copy; KDK News 2023</p>
-      </div>
     </footer>
     <!-- 1-jQuery 2-Bootstrap 3-my script-->
     <script
